force-app/main/default/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <label>Credential</label>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>