force-app/main/default/objects/Credential__c/fields/Authenticated__c.field-meta.xml
<CustomField>
    <fullName>Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authenticated</label>
    <type>Checkbox</type>
</CustomField>