force-app/main/default/objects/Credential__c/fields/Code_Backup__c.field-meta.xml
<CustomField>
    <fullName>Code_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Copy Source Code and upload to files and enable check box</inlineHelpText>
    <label>Code Backup</label>
    <type>Checkbox</type>
</CustomField>