force-app/main/default/objects/Credential__c/fields/For__c.field-meta.xml
<CustomField>
    <fullName>For__c</fullName>
    <label>For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
                <default>true</default>
                <label>OTHER</label>
            </value>
            <value>
                <fullName>PRODUCT</fullName>
            </value>
            <value>
                <fullName>TRAILHEAD</fullName>
            </value>
            <value>
                <fullName>POC DEV</fullName>
            </value>
            <value>
                <fullName>PROJECT</fullName>
            </value>
            <value>
                <fullName>GPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>