force-app/main/default/objects/Credential__c/fields/Git_Url__c.field-meta.xml
<CustomField>
    <fullName>Git_Url__c</fullName>
    <label>Git Url</label>
    <type>Url</type>
</CustomField>