force-app/main/default/objects/Credential__c/fields/OTP_Email__c.field-meta.xml
<CustomField>
    <fullName>OTP_Email__c</fullName>
    <label>OTP Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>