force-app/main/default/objects/Credential__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>login</fullName>
                <default>true</default>
                <label>Developer/Production</label>
            </value>
            <value>
                <fullName>test</fullName>
                <label>Sandbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>