force-app/main/default/objects/Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>For__c</columns>
    <columns>Authenticated__c</columns>
    <columns>Active__c</columns>
    <columns>Domain__c</columns>
    <columns>Org_Id__c</columns>
    <columns>Code_Backup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>